[package]
name = "brown_apple_juice"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.16.0", features = ["bluetoothd"] }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.32.0", features = ["io-std"] }
